--- a/git_test/My_PortfolioWebsite/index.html
+++ b/git_test/My_PortfolioWebsite/index.html
@@ -84,7 +84,7 @@
                 alt=""></a></li>
           <li><a href="https://tobiasbuse.github.io/ProjectHeadphones/"><img src="assets/img/headphone.png" alt=""></a>
           </li>
-          <li><a href="https://tobiasbuse.github.io/Project_Illustration/"><img src="assets/img/illustration.png"
+          <li><a href="https://tobiasbuse.github.io/SuperDuper/"><img src="assets/img/superduper.jpg"
                 alt=""></a></li>
           <li><a href="https://tobiasbuse.github.io/Project_Folio/"><img src="assets/img/folio.jpeg"
                 alt=""></a></li>
